# chatgpt_broswer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  Makefile  README.md  TEST_UPDATE_SUMMARY.md  cgpt-tui.py  cgpt.py  cgpt_modular.py  chatgpt_browser.py  chatgpt_tui.py  cli_config.py  cli_data_loader.py  cli_export_formats.py  cli_parser.py  cli_search.py  cli_ui_interactive.py  conftest.py  conversation_tree.py  demo_tree_organization.py  enhanced_tui.py  folder_management.py  pyproject.toml  pytest.ini  quick_tui_test.py  sample_conversations.json  test_cgpt.py  test_cli_integration.py  test_conversation_tree.py  test_edge_cases.py  test_tree.py  test_tree_with_real_data.py  test_tui_import.py  test_tui_launch.py  test_tui_tree.py  tree_constants.py  tree_operations.py  tree_organization_design.md  ui_base.py
ccsm/cli/: cli.py
ccsm/core/: claude_loader.py  curses_context.py  exporter.py  gemini_loader.py  lazy_loader.py  loader.py  logging_config.py  models.py  performance.py  type_definitions.py  validation.py
ccsm/tree/: tree.py
ccsm/tui/: action_handler.py  action_manager.py  fzf_search.py  key_mapper.py  operations_manager.py  search_manager.py  selection_manager.py  tree_manager.py  tree_view.py  tui.py
chatgpt_browser/cli/: cli.py
chatgpt_browser/core/: claude_loader.py  curses_context.py  exporter.py  gemini_loader.py  lazy_loader.py  loader.py  logging_config.py  models.py  performance.py  validation.py
chatgpt_browser/tree/: tree.py
chatgpt_browser/tui/: action_manager.py  fzf_search.py  input.py  operations_manager.py  search_manager.py  search_overlay.py  selection_manager.py  tree_manager.py  tree_view.py  tui.py  tui_state.py  tui_utils.py
docs/: ARCHITECTURE.md  tree_organization_design.md
scripts/: cgpt-tui.py  cgpt.py  run_tests.sh
src/cli/: cgpt.py  cgpt_modular.py  chatgpt_cli.py  cli.py  cli_export_formats.py  cli_parser.py  cli_search.py  cli_ui_interactive.py  simple_cli.py
src/core/: chatgpt_browser.py  claude_loader.py  conversation_operations.py  curses_context.py  exporter.py  extractors.py  loader.py  models.py  simple_loader.py  time_utils.py  type_definitions.py  validation.py
src/tree/: conversation_tree.py  simple_tree.py  tree.py  tree_exceptions.py  tree_operations.py  tree_types.py
src/tui/: action_handler.py  action_manager.py  chatgpt_tui.py  detail.py  detail_view.py  enhanced_tree_ux.py  enhanced_tui.py  folder_management.py  fzf_search.py  operations_manager.py  search_manager.py  (+16 more)
tests/: test_claude_loader.py  test_claude_project_detection.py  test_cli.py  test_fzf_search.py  test_gemini_loader.py  test_key_mapper.py  test_lazy_loader.py  test_logging.py  test_models.py  test_performance.py  test_simple.py  test_tui_refactor.py  test_validation.py
