[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-browser"
version = "0.1.0"
description = "A terminal-based browser for ChatGPT conversations with tree organization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ChatGPT Browser Contributors"},
]
dependencies = []

[project.scripts]
cgpt = "src.cli.cli:main"
cgpt-tui = "src.tui.tui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120